# chem-viewer

./: .gitignore  CMakeLists.txt  LICENSE  Main.c  README.md
.cache/clangd/index/: Main.c.B721E767F21D9F98.idx
about/: pipeline.drawio
include/: peBase.h  peMath.h  peRectangle.h
lib/: ProcekEngineTest
scripts/: makeRun.sh
src/: BaseFunctions.h  Constants.h  InputHandler.h  Main.c  Math.h  Structs.h  peBase.c  peMath.c  peRectangle.c
test/: Main.c
